--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,5 @@ python-dotenv
 aiosqlite
 TTS
 pydub
+pyloudnorm
 # Требуется установленный ffmpeg с поддержкой libopus (например, сборка gyan.dev full)
